Closed
Bug 72498
Opened 25 years ago
Closed 25 years ago
no "File Here" in file menu
Categories
(SeaMonkey :: MailNews: Message Display, defect, P1)
SeaMonkey
MailNews: Message Display
Tracking
(Not tracked)
VERIFIED
FIXED
mozilla0.9
People
(Reporter: sspitzer, Assigned: racham)
References
Details
(Whiteboard: [nsbeta1+])
Attachments
(1 file)
|
30.88 KB,
patch
|
Details | Diff | Splinter Review |
same goes for Copy and Move.
instead, I get a thin, blank area where it used to say "File Here"
Comment 1•25 years ago
|
||
This regressed sometime between 0.8 and March 14 (I know, a big window).
Updated•25 years ago
|
QA Contact: esther → nbaca
| Reporter | ||
Comment 2•25 years ago
|
||
bhuvan has a fix for this in his local tree.
Assignee: sspitzer → racham
Adding Gayatri to cc list.
This is patch is similar to the one posted in bug 71096 (which never made it to
081 branch). This patch is now trunk specific (with 'label' replacing 'value').
Gayatri and Seth already reviewed patch in bug 71096. Thanks for reviews and
comments then.
Here are the only new things that I added this time.
* In msgFolderPickerOverlay.js, I had to replace one instance of 'value' to
'label' (this change is very much needed to make things work as expected)
* Added menu-iconic and menuitem-iconic in couple of places in
messengercompose.xul so that folder icons show up next to folders.
Gayatri & Seth, I need r= & sr= one more time. Thanks.
Status: NEW → ASSIGNED
Comment 5•25 years ago
|
||
maring nsbeta1+
Priority: -- → P1
Whiteboard: [nsbeta1+]
Target Milestone: --- → mozilla0.9
*** Bug 71096 has been marked as a duplicate of this bug. ***
Gayatri is on leave. Adding David to cc list for review. thanks.
Comment 8•25 years ago
|
||
r=bienvenu - I look forward to getting this back :-)
| Reporter | ||
Comment 9•25 years ago
|
||
sr=sspitzer
| Assignee | ||
Comment 10•25 years ago
|
||
Marking Fixed.
Status: ASSIGNED → RESOLVED
Closed: 25 years ago
Resolution: --- → FIXED
Comment 11•25 years ago
|
||
Should this also fix "File Here" not appearing:
- when using the context menu for Copy or Move?
- in the Copies and Folders cascanding menus?
| Assignee | ||
Comment 12•25 years ago
|
||
Here is the list of the places to be checked inorder to verify this fix.
* ThreadPane Context - Move and Copy Message
* MessagePane Context - Move and Copy Message
* Message Menu item - Move and Copy Message
* Toolbar FileButton
* Copies and Folders - Fcc, Drafts, Templates
* New Folder Creation (choosing parent folder)
* Search Dialog Picker
* Filter Editor Folder Picker (New/Edit filter)
* Compose window : Options->File Sent Message
Comment 13•25 years ago
|
||
Build 2001-04-02-04: NT4
Build 2001-04-02-08: Linux RH 6.2, Mac 9.04
Verified Fixed. I checked the areas that racham suggested.
Status: RESOLVED → VERIFIED
Updated•21 years ago
|
Product: Browser → Seamonkey
You need to log in
before you can comment on or make changes to this bug.
Description
•