Fixing bugs 72498, 73892 and 72531. Fixing bug 72498 brings back File Here menuitem back into all mailnews folder pickers. This one missed 081 branch train. Thanks to all who reviewed this patch now and then. Fixing bug 73892 makes the Bcc Self field appear again in Copies and Folders panel of any given server and fianlly fix to bug 72531 makes Search Messages link to appear for news and movemail accounts in AccountCentral. r=gayatrib, bienvenu, racham sr=sspitzer